javacc-clojure-compiler/ClojureCompiler/src/test.java
/* Generated By:JavaCC: Do not edit this line. test.java */
import nodes.*;
import java.util.Scanner;

public class test implements testConstants {
  public static void main(String [] args)
  {
    try
    {
      test parser = new test(System.in);
      treeNode n = parser.start();
      n.execute();
    }
    catch (Exception e)
    {
      System.out.print(e.getMessage());
    }
  }

  static final public treeNode start() throws ParseException {
  blockNode b = new blockNode();
  treeNode i;
    label_1:
    while (true) {
      i = block();
      b.addChild(i);
      if (jj_2_1(2)) {
        ;
      } else {
        break label_1;
      }
    }
    jj_consume_token(ENDPROGRAM);
    {if (true) return b;}
    throw new Error("Missing return statement in function");
  }

  static final public blockNode block() throws ParseException {
  blockNode b = new blockNode();
  treeNode i;
    label_2:
    while (true) {
      jj_consume_token(OPEN);
      if (jj_2_2(2)) {
        i = ifSt();
      } else if (jj_2_3(2)) {
        i = assign();
      } else if (jj_2_4(2)) {
        i = modification();
      } else if (jj_2_5(2)) {
        i = print();
      } else if (jj_2_6(2)) {
        i = loop();
      } else if (jj_2_7(2)) {
        i = repeat();
      } else if (jj_2_8(2)) {
        i = cond();
      } else if (jj_2_9(2)) {
        i = switchSt();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(CLOSE);
      b.addChild(i);
      if (jj_2_10(2)) {
        ;
      } else {
        break label_2;
      }
    }
    {if (true) return b;}
    throw new Error("Missing return statement in function");
  }

  static final public repeatNode repeat() throws ParseException {
  Token t1, t2;
  valueNode s1, s2;
  repeatNode r = new repeatNode();
    jj_consume_token(REPEAT);
    t1 = jj_consume_token(INT);
    t2 = jj_consume_token(STR);
    s1 = new intNode(t1.image);
    s2 = new stringNode(t2.image);
    r.addChild(s1);
    r.addChild(s2);
    {if (true) return r;}
    throw new Error("Missing return statement in function");
  }

  static final public loopNode loop() throws ParseException {
  loopNode loo = new loopNode();
  assignNode ass;
  conditionNode con;
  blockNode b;
  modNode c;
    jj_consume_token(LOOP);
    ass = assign();
    jj_consume_token(OPEN);
    jj_consume_token(WHEN);
    con = cond();
    b = block();
    jj_consume_token(OPEN);
    jj_consume_token(RECUR);
    jj_consume_token(OPEN);
    c = modification();
    jj_consume_token(CLOSE);
    jj_consume_token(CLOSE);
    jj_consume_token(CLOSE);
    loo.addChild(ass);
    loo.addChild(con);
    loo.addChild(b);
    loo.addChild(c);
    {if (true) return loo;}
    throw new Error("Missing return statement in function");
  }

  static final public ifNode ifSt() throws ParseException {
  ifNode iff = new ifNode();
  conditionNode c;
  blockNode b;
    jj_consume_token(IF);
    jj_consume_token(OPEN);
    c = cond();
    jj_consume_token(CLOSE);
    jj_consume_token(36);
    b = block();
    jj_consume_token(37);
    iff.addChild(c);
    iff.addChild(b);
    {if (true) return iff;}
    throw new Error("Missing return statement in function");
  }

  static final public conditionNode cond() throws ParseException {
  conditionNode c = new conditionNode();
  Token t1, t2, t3;
  valueNode s1, s2, s3;
    jj_consume_token(OPEN);
    t1 = jj_consume_token(COMPAREOP);
                         s1 = new stringNode(t1.image); c.addChild(s1);
    if (jj_2_11(2)) {
      t2 = jj_consume_token(INT);
                    s2 = new intNode(t2.image); c.addChild(s2);
    } else if (jj_2_12(2)) {
      t2 = jj_consume_token(VAR);
                    s2 = new varNode(t2.image); c.addChild(s2);
    } else if (jj_2_13(2)) {
      t2 = jj_consume_token(STR);
                    s2 = new stringNode(t2.image); c.addChild(s2);
    } else if (jj_2_14(2)) {
      t2 = jj_consume_token(BOOL);
                     s2 = new boolNode(t2.image); c.addChild(s2);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    if (jj_2_15(2)) {
      t3 = jj_consume_token(INT);
                    s3 = new intNode(t3.image); c.addChild(s3);
    } else if (jj_2_16(2)) {
      t3 = jj_consume_token(VAR);
                    s3 = new varNode(t3.image); c.addChild(s3);
    } else if (jj_2_17(2)) {
      t3 = jj_consume_token(STR);
                    s3 = new stringNode(t3.image); c.addChild(s3);
    } else if (jj_2_18(2)) {
      t3 = jj_consume_token(BOOL);
                     s3 = new boolNode(t3.image); c.addChild(s3);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(CLOSE);
    {if (true) return c;}
    throw new Error("Missing return statement in function");
  }

  static final public printNode print() throws ParseException {
  printNode p = new printNode();
  Token t1, t2;
  valueNode s1, s2;
    jj_consume_token(PRINT);
    if (jj_2_19(2)) {
      t1 = jj_consume_token(INT);
                    s1 = new intNode(t1.image); p.addChild(s1);
    } else if (jj_2_20(2)) {
      t1 = jj_consume_token(VAR);
                    s1 = new varNode(t1.image); p.addChild(s1);
    } else if (jj_2_21(2)) {
      t1 = jj_consume_token(STR);
                    s1 = new stringNode(t1.image); p.addChild(s1);
    } else if (jj_2_22(2)) {
      t1 = jj_consume_token(BOOL);
                     s1 = new boolNode(t1.image); p.addChild(s1);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    label_3:
    while (true) {
      if (jj_2_23(2)) {
        ;
      } else {
        break label_3;
      }
      jj_consume_token(COMMA);
      if (jj_2_24(2)) {
        t2 = jj_consume_token(INT);
                            s2 = new intNode(t2.image); p.addChild(s2);
      } else if (jj_2_25(2)) {
        t2 = jj_consume_token(VAR);
                            s2 = new varNode(t2.image); p.addChild(s2);
      } else if (jj_2_26(2)) {
        t2 = jj_consume_token(STR);
                            s2 = new stringNode(t2.image); p.addChild(s2);
      } else if (jj_2_27(2)) {
        t2 = jj_consume_token(BOOL);
                             s2 = new boolNode(t2.image); p.addChild(s2);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    {if (true) return p;}
    throw new Error("Missing return statement in function");
  }

  static final public assignNode assign() throws ParseException {
  assignNode ass = new assignNode();
  Token t1, t2;
  valueNode s1, s2;
    jj_consume_token(DEF);
    t1 = jj_consume_token(VAR);
                  s1 = new stringNode(t1.image); ass.addChild(s1);
    if (jj_2_28(2)) {
      t2 = jj_consume_token(INT);
                           s2 = new intNode(t2.image); ass.addChild(s2);
    } else if (jj_2_29(2)) {
      t2 = jj_consume_token(STR);
                           s2 = new stringNode(t2.image); ass.addChild(s2);
    } else if (jj_2_30(2)) {
      t2 = jj_consume_token(BOOL);
                            s2 = new boolNode(t2.image); ass.addChild(s2);
    } else if (jj_2_31(2)) {
      t2 = jj_consume_token(READ);
                                   s2 = new stringNode(t2.image); ass.addChild(s2);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return ass;}
    throw new Error("Missing return statement in function");
  }

  static final public modNode modification() throws ParseException {
  modNode m = new modNode();
  Token t1, t2, t3;
  valueNode s1, s2, s3;
    t2 = jj_consume_token(MATHOP);
    t1 = jj_consume_token(VAR);
    t3 = jj_consume_token(INT);
    s1 = new stringNode(t1.image);
    s2 = new stringNode(t2.image);
    s3 = new intNode(t3.image);
    m.addChild(s1);
    m.addChild(s2);
    m.addChild(s3);
    {if (true) return m;}
    throw new Error("Missing return statement in function");
  }

  static final public switchNode switchSt() throws ParseException {
  switchNode sw = new switchNode();
  Token t1, t2;
  valueNode s1, s2;
  miniSwitchNode swBlock;
  blockNode b, defaultBlock;
    jj_consume_token(CASE);
    t1 = jj_consume_token(VAR);
                  s1 = new varNode(t1.image);
    label_4:
    while (true) {
      if (jj_2_32(2)) {
        t2 = jj_consume_token(INT);
                      s2 = new intNode(t2.image);
      } else if (jj_2_33(2)) {
        t2 = jj_consume_token(STR);
                      s2 = new stringNode(t2.image);
      } else if (jj_2_34(2)) {
        t2 = jj_consume_token(BOOL);
                       s2 = new boolNode(t2.image);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      b = block();
      swBlock = new miniSwitchNode(s1); //Variable we are matching
      swBlock.addChild(s2); //value of miniBlock to be matched
      swBlock.addChild(b); //behavior of miniBlock
      sw.addChild(swBlock); //add miniBlock to switch statement

      if (jj_2_35(2)) {
        ;
      } else {
        break label_4;
      }
    }
    if (jj_2_36(2)) {
      defaultBlock = block();
      sw.addChild(defaultBlock);
    } else {
      ;
    }
    {if (true) return sw;}
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  static private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  static private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  static private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  static private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  static private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  static private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  static private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  static private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  static private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  static private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  static private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  static private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  static private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  static private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  static private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  static private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  static private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  static private boolean jj_2_27(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_27(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  static private boolean jj_2_28(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_28(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  static private boolean jj_2_29(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_29(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  static private boolean jj_2_30(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_30(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  static private boolean jj_2_31(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_31(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(30, xla); }
  }

  static private boolean jj_2_32(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_32(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(31, xla); }
  }

  static private boolean jj_2_33(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_33(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(32, xla); }
  }

  static private boolean jj_2_34(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_34(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(33, xla); }
  }

  static private boolean jj_2_35(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_35(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(34, xla); }
  }

  static private boolean jj_2_36(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_36(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(35, xla); }
  }

  static private boolean jj_3_27() {
    if (jj_scan_token(BOOL)) return true;
    return false;
  }

  static private boolean jj_3R_10() {
    if (jj_scan_token(LOOP)) return true;
    if (jj_3R_7()) return true;
    return false;
  }

  static private boolean jj_3_26() {
    if (jj_scan_token(STR)) return true;
    return false;
  }

  static private boolean jj_3_25() {
    if (jj_scan_token(VAR)) return true;
    return false;
  }

  static private boolean jj_3_24() {
    if (jj_scan_token(INT)) return true;
    return false;
  }

  static private boolean jj_3_23() {
    if (jj_scan_token(COMMA)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_24()) {
    jj_scanpos = xsp;
    if (jj_3_25()) {
    jj_scanpos = xsp;
    if (jj_3_26()) {
    jj_scanpos = xsp;
    if (jj_3_27()) return true;
    }
    }
    }
    return false;
  }

  static private boolean jj_3_22() {
    if (jj_scan_token(BOOL)) return true;
    return false;
  }

  static private boolean jj_3R_11() {
    if (jj_scan_token(REPEAT)) return true;
    if (jj_scan_token(INT)) return true;
    return false;
  }

  static private boolean jj_3_36() {
    if (jj_3R_5()) return true;
    return false;
  }

  static private boolean jj_3_21() {
    if (jj_scan_token(STR)) return true;
    return false;
  }

  static private boolean jj_3_20() {
    if (jj_scan_token(VAR)) return true;
    return false;
  }

  static private boolean jj_3_19() {
    if (jj_scan_token(INT)) return true;
    return false;
  }

  static private boolean jj_3R_9() {
    if (jj_scan_token(PRINT)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_19()) {
    jj_scanpos = xsp;
    if (jj_3_20()) {
    jj_scanpos = xsp;
    if (jj_3_21()) {
    jj_scanpos = xsp;
    if (jj_3_22()) return true;
    }
    }
    }
    return false;
  }

  static private boolean jj_3_34() {
    if (jj_scan_token(BOOL)) return true;
    return false;
  }

  static private boolean jj_3_33() {
    if (jj_scan_token(STR)) return true;
    return false;
  }

  static private boolean jj_3_32() {
    if (jj_scan_token(INT)) return true;
    return false;
  }

  static private boolean jj_3_9() {
    if (jj_3R_13()) return true;
    return false;
  }

  static private boolean jj_3_8() {
    if (jj_3R_12()) return true;
    return false;
  }

  static private boolean jj_3_35() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_32()) {
    jj_scanpos = xsp;
    if (jj_3_33()) {
    jj_scanpos = xsp;
    if (jj_3_34()) return true;
    }
    }
    if (jj_3R_5()) return true;
    return false;
  }

  static private boolean jj_3_7() {
    if (jj_3R_11()) return true;
    return false;
  }

  static private boolean jj_3_6() {
    if (jj_3R_10()) return true;
    return false;
  }

  static private boolean jj_3_5() {
    if (jj_3R_9()) return true;
    return false;
  }

  static private boolean jj_3_4() {
    if (jj_3R_8()) return true;
    return false;
  }

  static private boolean jj_3_3() {
    if (jj_3R_7()) return true;
    return false;
  }

  static private boolean jj_3_2() {
    if (jj_3R_6()) return true;
    return false;
  }

  static private boolean jj_3_18() {
    if (jj_scan_token(BOOL)) return true;
    return false;
  }

  static private boolean jj_3R_13() {
    if (jj_scan_token(CASE)) return true;
    if (jj_scan_token(VAR)) return true;
    return false;
  }

  static private boolean jj_3_17() {
    if (jj_scan_token(STR)) return true;
    return false;
  }

  static private boolean jj_3_10() {
    if (jj_scan_token(OPEN)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_2()) {
    jj_scanpos = xsp;
    if (jj_3_3()) {
    jj_scanpos = xsp;
    if (jj_3_4()) {
    jj_scanpos = xsp;
    if (jj_3_5()) {
    jj_scanpos = xsp;
    if (jj_3_6()) {
    jj_scanpos = xsp;
    if (jj_3_7()) {
    jj_scanpos = xsp;
    if (jj_3_8()) {
    jj_scanpos = xsp;
    if (jj_3_9()) return true;
    }
    }
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3_16() {
    if (jj_scan_token(VAR)) return true;
    return false;
  }

  static private boolean jj_3_15() {
    if (jj_scan_token(INT)) return true;
    return false;
  }

  static private boolean jj_3R_5() {
    Token xsp;
    if (jj_3_10()) return true;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_10()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3_14() {
    if (jj_scan_token(BOOL)) return true;
    return false;
  }

  static private boolean jj_3_13() {
    if (jj_scan_token(STR)) return true;
    return false;
  }

  static private boolean jj_3_12() {
    if (jj_scan_token(VAR)) return true;
    return false;
  }

  static private boolean jj_3_11() {
    if (jj_scan_token(INT)) return true;
    return false;
  }

  static private boolean jj_3R_12() {
    if (jj_scan_token(OPEN)) return true;
    if (jj_scan_token(COMPAREOP)) return true;
    return false;
  }

  static private boolean jj_3R_8() {
    if (jj_scan_token(MATHOP)) return true;
    if (jj_scan_token(VAR)) return true;
    return false;
  }

  static private boolean jj_3_1() {
    if (jj_3R_5()) return true;
    return false;
  }

  static private boolean jj_3_31() {
    if (jj_scan_token(READ)) return true;
    return false;
  }

  static private boolean jj_3_30() {
    if (jj_scan_token(BOOL)) return true;
    return false;
  }

  static private boolean jj_3_29() {
    if (jj_scan_token(STR)) return true;
    return false;
  }

  static private boolean jj_3_28() {
    if (jj_scan_token(INT)) return true;
    return false;
  }

  static private boolean jj_3R_6() {
    if (jj_scan_token(IF)) return true;
    if (jj_scan_token(OPEN)) return true;
    return false;
  }

  static private boolean jj_3R_7() {
    if (jj_scan_token(DEF)) return true;
    if (jj_scan_token(VAR)) return true;
    return false;
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public testTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private Token jj_scanpos, jj_lastpos;
  static private int jj_la;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[0];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {};
   }
  static final private JJCalls[] jj_2_rtns = new JJCalls[36];
  static private boolean jj_rescan = false;
  static private int jj_gc = 0;

  /** Constructor with InputStream. */
  public test(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public test(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new testTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }
